# defectmof

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
analysis/: 01_md_150K_and_pdf.py  02_supercell_optimization.py  03_compare_pristine_vs_defective.py  04_full_analysis_multi_model.py  05_safe_multi_model_analysis.py  06_production_dispersion.py
analysis/configs/: md_defective_150K.yaml  md_pristine_150K.yaml
analysis/results/: pdf_defective_mof_omat_v2.csv  pdf_pristine_mofs_v2.csv  rdf_defective_mace_mp_small.csv  rdf_defective_mof_omat_v2.csv  rdf_defective_mofs_v2.csv  rdf_pristine_mace_mp_small.csv  rdf_pristine_mof_omat_v2.csv  rdf_pristine_mofs_v2.csv
examples/: 01_supercell_optimization.py  02_md_simulation_150K.py  03_pdf_from_md.py
examples/configs/: md_150K.yaml  optimize.yaml  pdf_from_md.yaml  supercell.yaml
examples/structures/: CONTCAR_final.cif  CONTCAR_optimized.cif  struct1_optimized_c_axis.cif  struct2_optimized_a_axis.cif
src/defectmof/: __init__.py  _ase.py  _torchsim.py  cli.py  md.py  optimize.py  pdf.py  pipeline.py  supercell.py  utils.py
tests/: conftest.py  test_ase_backend.py  test_cli.py  test_md.py  test_optimize.py  test_pdf.py  test_physical_validation.py  test_pipeline.py  test_supercell.py  test_torchsim_backend.py  test_utils.py
